--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "''",
   "scripts": {
     "build": "NODE_ENV=production webpack -p --config webpack.production.config.js --progress --profile --colors",
-    "dev": "webpack-dev-server --progress --profile --colors --hot --host 0.0.0.0" 
+    "dev": "webpack-dev-server --progress --profile --colors --hot --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -38,10 +38,13 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
-    "css-loader": "0.23.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.8.5",
+    "node-sass": "^3.7.0",
     "react-hot-loader": "1.3.0",
-    "style-loader": "0.13.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1"
